build dbmodel java classes from jaxb